--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <div class="container" role="main" aria-label="نموذج تسجيل الدخول">
   <div class="logo" aria-label="شعار اللعبة">
-    <img src="شعار-اللعبة.png" alt="شعار لعبة البوكر" />
+    <img src="الصفحة_الرئيسية.png" alt="شعار لعبة البوكر" />
   </div>
   <h2>تسجيل حساب جديد</h2>
   <form id="registerForm" novalidate>
